--- a/ckan_dashboard.Rmd
+++ b/ckan_dashboard.Rmd
@@ -30,6 +30,9 @@ users <- reactive({
 
 # Grab all datasets on WPRDC and filter them by org id
 dataSets <- reactive({
+  UTCTime <- Sys.time()
+  attr(UTCTime, "tzone") <- "UTC" 
+  
   data <- fromJSON(paste0("https://", host, "/api/action/package_search?rows=1000&start=0"))$result
   dataSets <- select(data$results, -c(relationships_as_object, relationships_as_subject, extras, groups)) %>%
     flatten() %>%
@@ -47,7 +50,7 @@ dataSets <- reactive({
                                      ),
            # Resource link
            title = paste0('<a href="https://', host, '/dataset/', name, '" target="_blank">', title, '</a>'),
-           measure_hrs = difftime(Sys.time(), metadata_modified, units = "hours"),
+           measure_hrs = difftime(UTCTime, metadata_modified, units = "hours"),
            # Build Alert
            alert = ifelse(measure_hrs >= update_period, 1, 0))
   
